--- a/CompProj/CompProj.csproj
+++ b/CompProj/CompProj.csproj
@@ -45,18 +45,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Row.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Models\ComparisonExecutor.cs" />
+    <Compile Include="Models\ComparisonHelper.cs" />
+    <Compile Include="Models\ComparisonProcessor.cs" />
+    <Compile Include="Models\FileReader.cs" />
+    <Compile Include="Models\Interfaces\IComparisonProcessor.cs" />
+    <Compile Include="Models\Interfaces\IFileReader.cs" />
+    <Compile Include="Models\Interfaces\IWorkTable.cs" />
+    <Compile Include="Models\PerformanceCounter.cs" />
+    <Compile Include="Models\Row.cs" />
+    <Compile Include="Presenters\ComparisonPresenter.cs" />
+    <Compile Include="Presenters\FileReaderPresenter.cs" />
+    <Compile Include="Views\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="Views\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="FlatFile.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WorkTable.cs" />
-    <EmbeddedResource Include="Form1.resx">
+    <Compile Include="Models\WorkTable.cs" />
+    <EmbeddedResource Include="Views\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -81,5 +90,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
