--- a/CompProj/CompProj.csproj
+++ b/CompProj/CompProj.csproj
@@ -54,19 +54,30 @@
     <Compile Include="Models\Interfaces\IWorkTable.cs" />
     <Compile Include="Models\PerformanceCounter.cs" />
     <Compile Include="Models\Row.cs" />
-    <Compile Include="Presenters\ComparisonPresenter.cs" />
-    <Compile Include="Presenters\FileReaderPresenter.cs" />
-    <Compile Include="Views\Form1.cs">
+    <Compile Include="Presenters\FilePreviewPresenter.cs" />
+    <Compile Include="Presenters\MainPresenter.cs" />
+    <Compile Include="Views\FilePreviewForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Views\FilePreviewForm.Designer.cs">
+      <DependentUpon>FilePreviewForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Interfaces\IFilePreviewView.cs" />
+    <Compile Include="Views\Interfaces\IMainView.cs" />
+    <Compile Include="Views\MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\WorkTable.cs" />
-    <EmbeddedResource Include="Views\Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Views\FilePreviewForm.resx">
+      <DependentUpon>FilePreviewForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
