--- a/CompProj/CompProj.csproj
+++ b/CompProj/CompProj.csproj
@@ -49,20 +49,22 @@
     <Compile Include="Models\ComparisonHelper.cs" />
     <Compile Include="Models\ComparisonProcessor.cs" />
     <Compile Include="Models\FileReader.cs" />
+    <Compile Include="Models\ImpConfig.cs" />
     <Compile Include="Models\Interfaces\IComparisonProcessor.cs" />
     <Compile Include="Models\Interfaces\IFileReader.cs" />
+    <Compile Include="Models\Interfaces\IImpConfig.cs" />
     <Compile Include="Models\Interfaces\IWorkTable.cs" />
     <Compile Include="Models\PerformanceCounter.cs" />
     <Compile Include="Models\Row.cs" />
-    <Compile Include="Presenters\FilePreviewPresenter.cs" />
+    <Compile Include="Presenters\ImpConfigPresenter.cs" />
     <Compile Include="Presenters\MainPresenter.cs" />
-    <Compile Include="Views\FilePreviewForm.cs">
+    <Compile Include="Views\ImpConfigForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\FilePreviewForm.Designer.cs">
-      <DependentUpon>FilePreviewForm.cs</DependentUpon>
+    <Compile Include="Views\ImpConfigForm.Designer.cs">
+      <DependentUpon>ImpConfigForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\Interfaces\IFilePreviewView.cs" />
+    <Compile Include="Views\Interfaces\IImpConfigView.cs" />
     <Compile Include="Views\Interfaces\IMainView.cs" />
     <Compile Include="Views\MainForm.cs">
       <SubType>Form</SubType>
@@ -73,8 +75,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\WorkTable.cs" />
-    <EmbeddedResource Include="Views\FilePreviewForm.resx">
-      <DependentUpon>FilePreviewForm.cs</DependentUpon>
+    <EmbeddedResource Include="Views\ImpConfigForm.resx">
+      <DependentUpon>ImpConfigForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
