--- a/CompProj/CompProj.csproj
+++ b/CompProj/CompProj.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\ColumnSummary.cs" />
+    <Compile Include="Models\ComparedRow.cs" />
     <Compile Include="Models\ComparisonHelper.cs" />
     <Compile Include="Models\ComparisonProcessor.cs" />
     <Compile Include="Models\FileReader.cs" />
