--- a/CompProj/CompProj.csproj
+++ b/CompProj/CompProj.csproj
@@ -52,22 +52,22 @@
     <Compile Include="Models\ComparisonHelper.cs" />
     <Compile Include="Models\ComparisonProcessor.cs" />
     <Compile Include="Models\FileReader.cs" />
-    <Compile Include="Models\ImpConfig.cs" />
+    <Compile Include="Models\FileConfiguration.cs" />
     <Compile Include="Models\Interfaces\IComparisonProcessor.cs" />
     <Compile Include="Models\Interfaces\IFileReader.cs" />
-    <Compile Include="Models\Interfaces\IImpConfig.cs" />
+    <Compile Include="Models\Interfaces\IFileConfiguration.cs" />
     <Compile Include="Models\Interfaces\IWorkTable.cs" />
     <Compile Include="Models\PerformanceCounter.cs" />
     <Compile Include="Models\Row.cs" />
-    <Compile Include="Presenters\ImpConfigPresenter.cs" />
+    <Compile Include="Presenters\FilePresenter.cs" />
     <Compile Include="Presenters\MainPresenter.cs" />
-    <Compile Include="Views\ImpConfigForm.cs">
+    <Compile Include="Views\FileForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\ImpConfigForm.Designer.cs">
-      <DependentUpon>ImpConfigForm.cs</DependentUpon>
+    <Compile Include="Views\FileForm.Designer.cs">
+      <DependentUpon>FileForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\Interfaces\IImpConfigView.cs" />
+    <Compile Include="Views\Interfaces\IFileView.cs" />
     <Compile Include="Views\Interfaces\IMainView.cs" />
     <Compile Include="Views\MainForm.cs">
       <SubType>Form</SubType>
@@ -78,8 +78,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\WorkTable.cs" />
-    <EmbeddedResource Include="Views\ImpConfigForm.resx">
-      <DependentUpon>ImpConfigForm.cs</DependentUpon>
+    <EmbeddedResource Include="Views\FileForm.resx">
+      <DependentUpon>FileForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
